--- a/style.css
+++ b/style.css
@@ -1,74 +1,101 @@
-
 body {
-    background-color: #15002e;
+  background-color: #15002e;
 }
 .div-0 {
-    font-family: "Source Code Pro", "Lucida Console", monospace;
-    color: white;
-    text-align: center;
+  font-family: "Source Code Pro", "Lucida Console", monospace;
+  color: white;
+  text-align: center;
 }
 .parent-1 {
-    height: 30px;
-    text-align: center;
-    margin-top: 30px;
+  height: 30px;
+  text-align: center;
+  margin-top: 30px;
 }
 .parent-2 {
-    height: 50px;
-    text-align: center;
+  height: 50px;
+  text-align: center;
 }
 .div-1 {
-    display: inline-block;
-    height: 20px;
-    width: 100px;
-    margin-right: 5px;
-    font-family: "Source Code Pro", "Lucida Console", monospace;
-    text-align: right;
-    color: white;
+  display: inline-block;
+  height: 20px;
+  width: 100px;
+  margin-right: 5px;
+  font-family: "Source Code Pro", "Lucida Console", monospace;
+  text-align: right;
+  color: white;
 }
 .div-2 {
-    display: inline-block;
-    height: 20px;
-    width: 100px;
-    margin-left: 5px;
-    font-family: "Source Code Pro", "Lucida Console", monospace;
-    text-align: left;
-    color: white;
+  display: inline-block;
+  height: 20px;
+  width: 100px;
+  margin-left: 5px;
+  font-family: "Source Code Pro", "Lucida Console", monospace;
+  text-align: left;
+  color: white;
 }
 .div-3 {
-    display: inline-block;
-    height: 20px;
-    width: 100px;
-    margin-right: 5px;
-    font-family: "Source Code Pro", "Lucida Console", monospace;
-    text-align: right;
-    color: white;
+  display: inline-block;
+  height: 20px;
+  width: 100px;
+  margin-right: 5px;
+  font-family: "Source Code Pro", "Lucida Console", monospace;
+  text-align: right;
+  color: white;
 }
 .div-4 {
-    display: inline-block;
-    height: 20px;
-    width: 100px;
-    margin-left: 5px;
-    font-family: "Source Code Pro", "Lucida Console", monospace;
-    text-align: left;
-    color: white;
+  display: inline-block;
+  height: 20px;
+  width: 100px;
+  margin-left: 5px;
+  font-family: "Source Code Pro", "Lucida Console", monospace;
+  text-align: left;
+  color: white;
 }
-.linkedinLink:link, .igLink:link, .youtubeLink, .githubLink {
-    color: cyan;
+.linkedinLink:link,
+.igLink:link,
+.youtubeLink,
+.githubLink {
+  color: cyan;
 }
-.linkedinLink:visited, .igLink:visited, .youtubeLink:visited, .githubLink:visited {
-    color: cyan;
+.linkedinLink:visited,
+.igLink:visited,
+.youtubeLink:visited,
+.githubLink:visited {
+  color: cyan;
 }
-.linkedinLink:hover, .igLink:hover, .youtubeLink:hover, .githubLink:hover {
-    color: yellow;
+.linkedinLink:hover,
+.igLink:hover,
+.youtubeLink:hover,
+.githubLink:hover {
+  color: yellow;
 }
-.text-area {
-    text-align:center;
+.text-area-div {
+  text-align: center;
 }
 .label-1 {
-    color: white;
-    font-family: "Source Code Pro", "Lucida Console", monospace;
+  margin-bottom: 10px;
+  color: white;
+  font-family: "Source Code Pro", "Lucida Console", monospace;
+  display: inline-block;
 }
-.freeform {
-    margin-top: 10px;
-    font-family: "Source Code Pro", "Lucida Console", monospace;
+textarea {
+  font-family: "Source Code Pro", "Lucida Console Thin", monospace;
+  color: lime;
+  border: none;
+  background-color: black;
+  margin-bottom: 30px;
+}
+textarea:focus {
+  outline: none !important;
+  box-shadow: 0 0 40px #8cb5e0;
+}
+
+#fname {
+  background-color: #15002e;
+  color: white;
+  border: 1px solid white;
+}
+
+#fname:focus {
+  outline: none !important;
 }
