added new pages

--- a/textcryptor.css
+++ b/textcryptor.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #15002e;
+  background-color: #0f0022;
 }
 .div-0 {
   font-family: "Source Code Pro", "Lucida Console", monospace;
