--- a/index.css
+++ b/index.css
@@ -34,8 +34,9 @@
   margin-top: auto;
   text-align: right;
   margin-left: auto;
-  margin-right: var(--dl-space-space-threeunits);
+  margin-right: 48px;
   margin-bottom: auto;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .rightwing {
   top: 0px;
@@ -77,18 +78,6 @@
   border-style: hidden;
   border-width: 2px;
 }
-.text1,
-.text2,
-.text3 {
-  top: 0px;
-  left: var(--dl-space-space-sixunits);
-  color: rgb(255, 255, 255);
-  bottom: 0px;
-  height: var(--dl-size-size-small);
-  margin: auto;
-  position: absolute;
-  font-size: 48px;
-}
 .text2-container {
   top: 0px;
   flex: 0 0 auto;
@@ -117,6 +106,19 @@
   border-color: rgba(120, 120, 120, 0.4);
   border-style: hidden;
   border-width: 2px;
+}
+.text1,
+.text2,
+.text3 {
+  top: 0px;
+  left: 48px;
+  color: rgb(255, 255, 255);
+  bottom: 0px;
+  height: 48px;
+  margin: auto;
+  position: absolute;
+  font-size: 48px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .vertical-line {
   top: 0px;
