attempt to mount react-todo-app

--- a/react-todo-app/App.css
+++ b/react-todo-app/App.css
@@ -8,7 +8,7 @@ body {
   padding: 50px;
   color: #f7f7f7;
   min-height: 100vh;
-  background: #252525;
+  background: #ff5b5b;
   text-rendering: optimizeSpeed;
   font-family: "Roboto", sans-serif;
 }
