--- a/index.css
+++ b/index.css
@@ -123,7 +123,7 @@ body {
   position: absolute;
   font-size: 48px;
   padding-left: 20px;
-  font-family: "Century Gothic", monospace;
+  font-family: "Source Code Pro", monospace;
 }
 .text1:hover {
   background-color: cyan;
